Spring Security, JWT Token expiration, Session Timeout are implemented